# job-schedule

./: .coveragerc  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  docker-compose.tests.yml  docker-compose.yml  mypy.ini  pytest.ini  setup.cfg
backend/: .coveragerc  .dockerignore  .env  .isort.cfg  Pipfile  dev-requirements.txt  dev_valid.sh  job_database  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
backend/.docker/: Dockerfile
backend/JSON/: auth_user.json  earnings_calculations.json  earnings_constants.json  earnings_jobhours.json  earnings_settlements.json  schedules_job.json  users_financials.json  users_profile.json
backend/apps/earnings/: admin.py  apps.py  models.py  signals.py
backend/apps/earnings/migrations/: 0001_initial.py  0002_alter_calculations_user_alter_constants_user_and_more.py  0002_initial.py  0003_alter_calculations_disability_contribution_and_more.py  0003_earnings_pit.py  0004_earnings_constant_disability_contribution_and_more.py  (+40 more)
backend/apps/filesaver/: apps.py  models.py
backend/apps/presentation_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/schedules/: admin.py  apps.py  models.py  services.py  signals.py  urls.py
backend/apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
backend/apps/workstations/: apps.py
backend/config/: asgi.py  celery.py  env.py  middleware.py  settings.py  urls.py  wsgi.py
backend/config/conf/: testing.py
backend/config/settings/: base.py  dev.py  local.py  production.py  test.py  testing.py
backend/docker/: Dockerfile  django.sh  docker-entrypoint.sh  entrypoint.sh
backend/docker/debug/: run.sh
backend/docker/dev/: django.sh
(+164 files in other folders)
